deployment/auth-deployment.yaml
# deployment/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # ✅ 이름 수정
  name: auth-backend-deployment-hoa
spec:
  replicas: 1
  selector:
    matchLabels:
      # ✅ 이름 수정
      app: auth-backend-hoa
  template:
    metadata:
      labels:
        # ✅ 이름 수정
        app: auth-backend-hoa
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        # ✅ 이름 수정
        - name: auth-backend-container-hoa
          image: kt16big.azurecr.io/auth-backend-hoa:$latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  # ✅ 이름 수정
  name: auth-backend-service-hoa
spec:
  type: ClusterIP
  selector:
    # ✅ 이름 수정 (위의 Deployment app 레이블과 일치해야 함)
    app: auth-backend-hoa
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
