deployment/board-backend-deployment.yaml
# ===================================================
# 26. 게시판(Board) - 백엔드(Spring Boot) 배포
# ===================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-backend-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: board-backend
  template:
    metadata:
      labels:
        app: board-backend
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        - name: board-backend-container
          image: kt16big.azurecr.io/board-backend:latest
          ports:
            - containerPort: 8082
---
# ===================================================
# 27. 게시판(Board) - 백엔드 서비스
# ===================================================
apiVersion: v1
kind: Service
metadata:
  name: board-backend-service
spec:
  type: ClusterIP
  selector:
    app: board-backend
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
