deployment/gateway-deployment.yaml
# gateway-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment-hoa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-hoa
  template:
    metadata:
      labels:
        app: gateway-hoa
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
      - name: gateway-container-hoa
        image: kt16big.azurecr.io/gateway-hoa:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: gateway-config-volume
          mountPath: /config
      volumes:
      - name: gateway-config-volume
        configMap:
          name: gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-hoa
spec:
  type: ClusterIP
  selector:
    app: gateway-hoa
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
