deployment/ppl-gen-backend-deployment.yaml
# ===================================================
# 1. PPL 생성기 - 백엔드(FastAPI) 배포
# ===================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppl-gen-backend-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ppl-gen-backend
  template:
    metadata:
      labels:
        app: ppl-gen-backend
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        - name: ppl-gen-backend-container
          image: kt16big.azurecr.io/ppl-gen-backend:latest
          ports:
            - containerPort: 8000
---
# ===================================================
# 2. PPL 생성기 - 백엔드 서비스
# ===================================================
apiVersion: v1
kind: Service
metadata:
  name: ppl-gen-backend-service
spec:
  type: ClusterIP
  selector:
    app: ppl-gen-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
