deployment/user-backend-deployment.yaml
# ===================================================
# 11. 사용자(User) 백엔드 배포
# ===================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-backend-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: user-backend
  template:
    metadata:
      labels:
        app: user-backend
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        - name: user-backend-container
          image: kt16big.azurecr.io/user-backend:latest
          ports:
            - containerPort: 8081
---
# ===================================================
# 12. 사용자(User) 백엔드 서비스
# ===================================================
apiVersion: v1
kind: Service
metadata:
  name: user-backend-service
spec:
  type: ClusterIP
  selector:
    app: user-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
