deployment/user-deployment.yaml
# deployment/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # ✅ 이름 수정
  name: user-backend-deployment-hoa
spec:
  replicas: 1
  selector:
    matchLabels:
      # ✅ 이름 수정
      app: user-backend-hoa
  template:
    metadata:
      labels:
        # ✅ 이름 수정
        app: user-backend-hoa
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        # ✅ 이름 수정
        - name: user-backend-container-hoa
          image: kt16big.azurecr.io/user-backend-hoa:$latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  # ✅ 이름 수정
  name: user-backend-service-hoa
spec:
  type: ClusterIP
  selector:
    # ✅ 이름 수정
    app: user-backend-hoa
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
