deployment/ingress-gateway-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ok-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 모든 요청을 Gateway로 라우팅 (Gateway에서 JWT 인증 처리)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service-hoa
            port:
              number: 8000
